overlay is fixed, spacing on modal for flexkey mobile

--- a/app/styles/modules/_products-modals.sass
+++ b/app/styles/modules/_products-modals.sass
@@ -1,6 +1,6 @@
 .modal
 	// display: none
-	position: absolute
+	position: fixed
 	left: 0
 	bottom: 0
 	width: 100%
@@ -33,7 +33,7 @@
 		// margin-top: -25%
 		// top: 30%
 		position: absolute
-		top: 5%
+		top: 0
 		// transform: translateY(-50%)
 
 	h3
@@ -63,20 +63,25 @@
 				margin-right: 1.5rem
 				 
 			li
-				font-size: 1.4rem
+				font-size: 1.3rem
 				position: relative
 				line-height: 2.5rem
 				padding-left: 3rem
 				text-indent: -3rem
-				transition: 
+	&-flexkey
+		.list-container
+			ul
+				li
+					line-height: 2.2rem
 		.left
 			width: 100%
 			left: 0
-			
+			margin-bottom: 0 
+			padding-bottom: 0
 		.right
 			width: 100%
 			left: 0
-	
+			padding-top: 0
 	.close-modal
 		left: 4%
 		width: 30px
@@ -109,13 +114,13 @@
 	.next
 		position: absolute
 		top: 45%
-		left: 95%
+		left: 98%
 		width: 3rem
 		height: 3rem
 	.prev
 		position: absolute
 		top: 45%
-		left: 5%
+		left: 2%
 		width: 3rem
 		height: 3rem
 	&.active
@@ -147,7 +152,7 @@
 @media screen and (min-width: 768px)
 	.modal
 		display: block
-		position: absolute
+		
 		left: 0
 		top: 0
 		width: 100%
