--- a/app/styles/sections/_thirteenth-sec.sass
+++ b/app/styles/sections/_thirteenth-sec.sass
@@ -1,6 +1,8 @@
 .thirteenth-sec
 	.product-block
 		display: none
+	.date
+		display: none
 	@media screen and (min-width: 768px)	
 		.product-wrapper
 			position: relative
@@ -20,4 +22,6 @@
 			position: absolute
 			display: block
 		
+		.date
+			display: block
 		
